Update client naming to Advertiser

--- a/app/views/agencies/show.slim
+++ b/app/views/agencies/show.slim
@@ -27,5 +27,5 @@
                       td = @agency.users.count
                       td
                         = link_to 'Edit', edit_agency_path
-                        = link_to 'Client(s)', agency_clients_path(@agency)
+                        = link_to 'Advertiser(s)', agency_clients_path(@agency)
                         = link_to 'User(s)', agency_users_path(@agency)
