--- a/app/views/campaign_mailer/internal_notification.slim
+++ b/app/views/campaign_mailer/internal_notification.slim
@@ -81,7 +81,7 @@ ul
             li = item
 
 - if @user.company_type == 'Agency'
-  h3 Agency's Client Details:
+  h3 Agency's Advertiser(s) Details:
 
 - elsif @user.company_type == 'Advertiser'
   h3 Advertiser Details:
