--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -51,7 +51,7 @@
 
             - if current_user.company_type == 'Agency'
               .col-12
-                = link_to 'Back to clients', agency_clients_path
+                = link_to 'Back to advertiser(s)', agency_clients_path
 
 
 
