--- a/app/views/clients/index.slim
+++ b/app/views/clients/index.slim
@@ -4,20 +4,20 @@
       h1.h5.mb-4.float-left
         | Data Studio >
         = link_to "#{current_user.company.name}", agency_path(current_user.company.id)
-        |  > Clients
+        |  > Advertisers
   .row
     .col-12
       .card
         .card-body
           .row
             .col-12
-              = link_to 'Create Clients', new_agency_client_path(agency_id: params[:agency_id]), class: 'btn btn-primary float-right mb-3'
+              = link_to 'Create Advertiser', new_agency_client_path(agency_id: params[:agency_id]), class: 'btn btn-primary float-right mb-3'
           .row
             .col-12
               table.table.table-striped
                 thead.thead-dark
                   tr
-                    th scope="col" Client
+                    th scope="col" Advertiser
                     th scope="col" Website
                     th scope='col' Industry
                     th scope="col" Action
