Update some naming convention

--- a/app/views/clients/_form.slim
+++ b/app/views/clients/_form.slim
@@ -78,7 +78,7 @@
     .col-6
       = link_to 'Cancel', agency_clients_path
     .col-6
-      = f.submit 'Update', class: 'btn btn-primary float-right'
+      = f.submit 'Submit', class: 'btn btn-primary float-right'
 
 
     javascript:
