--- a/app/views/clients/edit.slim
+++ b/app/views/clients/edit.slim
@@ -4,6 +4,7 @@
       h1.h5.mb-4.float-left
         | Data Studio >
         = link_to "#{current_user.company.name}", agency_path(current_user.company.id)
+        | > Edit Advertiser
 
   .row
     .col-12
