--- a/app/views/devise/passwords/new.slim
+++ b/app/views/devise/passwords/new.slim
@@ -1,9 +1,17 @@
+.container-fluid.h-100
+  .row.h-100.d-flex.align-items-center
+    .col-4
+    .col-4
+      .card
+        .card-body
+          = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+            .col.d-flex.flex-column.align-items-center
+              = render "devise/shared/error_messages", resource: resource
+            .col.d-flex.flex-column.align-items-center
+              = image_tag "signmark.svg", style: 'width: 72px', class: 'mb-5'
+            .col.d-flex.flex-column.align-items-center
+              h1.h4.mb-3.font-weight-normal Forgot your password?
+              = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email address', class: 'form-control mb-2'
+              = f.submit "Reset password", class: 'btn btn-primary btn-block mb-4'
 
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  = image_tag "signmark.svg", style: 'width: 72px', class: 'mb-5'
-  h1.h4.mb-3.font-weight-normal Forgot your password?
-  = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email address', class: 'form-control mb-2'
-  = f.submit "Reset password", class: 'btn btn-primary btn-block mb-4'
-
-  = render "devise/shared/links"
+              = render "devise/shared/links"
