Create and update campaign basic and campaign form logic

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -1,4 +1,31 @@
 .campaigns
+  .campaign-card
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.25)
+    border-radius: 8px
+    .campaign-card-body
+      padding: 60px
+      hr
+        color: #EFEFEF
+    h5
+      color: #7C3B94
+    .basic-input
+      height: 55px
+  .back-btn
+    border: 1px solid #58107C
+    box-sizing: border-box
+    border-radius: 8px
+    color: #58107C
+    width: 150px
+    height: 50px
+    font-size: 14px
+  .next-btn
+    width: 300px
+    height: 50px
+    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%)
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    border-radius: 8px
+    color: white
+    font-size: 14px
   .action-link
     margin-right: 10px
   .audience-targeting
