--- a/app/assets/stylesheets/base/layout.sass
+++ b/app/assets/stylesheets/base/layout.sass
@@ -13,6 +13,6 @@ body
   .main-content
     width: calc(100% - 275px)
     padding-top: 30px
-
-.h5 
+    background-color: #F9F9F9
+.h5
   font-size: 17px
