Agency Dashboard + Edit Profile + Create/Edit Advertiser completed

--- a/app/assets/stylesheets/base/layout.sass
+++ b/app/assets/stylesheets/base/layout.sass
@@ -13,6 +13,8 @@ body
   .main-content
     width: calc(100% - 275px)
     padding-top: 30px
+    background: #F9F9F9
+    height: 800px
 
 .h5 
   font-size: 17px
