--- a/app/assets/stylesheets/base/colors.sass
+++ b/app/assets/stylesheets/base/colors.sass
@@ -1,1 +1,5 @@
 $purple: #863399
+$purple-2: #58107C
+$purple-gradient-linear: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%)
+$purple-gradient-angular: conic-gradient(from 47.55deg at 57.06% -54.36%, #1C111E -172.56deg, #843693 19.34deg, #1C111E 187.44deg, #843693 379.34deg)
+$gray-2: #4F4F4F
