--- a/app/assets/stylesheets/base/font.sass
+++ b/app/assets/stylesheets/base/font.sass
@@ -1,23 +1,58 @@
-@font-face 
+@font-face
   font-family: 'sailec'
   src: font-url('sailec-light-webfont.woff2') format('woff2'), font-url('sailec-light-webfont.woff') format('woff')
   font-weight: 100
   font-style: normal
 
-@font-face 
+@font-face
   font-family: 'sailec'
   src: font-url('sailec-webfont.woff2') format('woff2'), font-url('sailec-webfont.woff') format('woff')
   font-weight: 300
   font-style: normal
 
-@font-face 
+@font-face
   font-family: 'sailec'
   src: font-url('sailec-medium-webfont.woff2') format('woff2'), font-url('sailec-medium-webfont.woff') format('woff')
   font-weight: 500
   font-style: normal
 
-@font-face 
+@font-face
   font-family: 'sailec'
   src: font-url('sailec-bold-webfont.woff2') format('woff2'), font-url('sailec-bold-webfont.woff') format('woff')
   font-weight: 700
   font-style: normal
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-ExtraLight.ttf') format('truetype')
+  font-weight: 200
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-Light.ttf') format('truetype')
+  font-weight: 300
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-Regular.ttf') format('truetype')
+  font-weight: 400
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-SemiBold.ttf') format('truetype')
+  font-weight: 600
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-Bold.ttf') format('truetype')
+  font-weight: 700
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-ExtraBold.ttf') format('truetype')
+  font-weight: 800
+
+@font-face
+  font-family: 'Nunito'
+  src: font-url('Nunito-Black.ttf') format('truetype')
+  font-weight: 900
