--- a/app/views/clients/_form.slim
+++ b/app/views/clients/_form.slim
@@ -1,92 +1,45 @@
 = simple_form_for [@agency, @client] do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
-  .row.form-page-1
-    .col-4
-      .form-group.mb-4
-        = f.input :name
-    .col-4
-      .form-group.mb-4
-        = f.input :website, label: 'Website URL'
-
-    .col-4
-      .form-group.mb-4
-        = f.input :industry, collection: industry_options, include_blank: false, input_html: { class: 'select2-input form-control' }
-    .col-4
-      .form-group.mb-4
-        = f.input :customer_target,  collection: customer_target_options, include_blank: false, input_html: { class: 'select2-input form-control' }
-    .col-4
-      .form-group.mb-4
-        = f.input :monthly_unique_visitors, input_html: { class: 'form-control' }
-
-    .col-4
-      .form-group.mb-4
-        = f.label :average_order_value, label: "Average Order Value (AOV)"
-        .input-group
-          .input-group-prepend
-            .input-group-text $
-          = f.input :average_order_value, label: false, input_html: { class: 'form-control' }
-    .col-4
-      .form-group.mb-4
-        = f.label :conversion_rate
-        .input-group
-          = f.input :conversion_rate, label: false, input_html: { class: 'form-control' }
-          .input-group-append
-            .input-group-text %
-    .col-4
-      .form-group.mb-4
-        = f.label :cost_per_acquisition, label: 'Cost Per Acquisition Goal (CPA)'
-        .input-group
-          .input-group-prepend
-            .input-group-text $
-          = f.input :cost_per_acquisition, label: false, input_html: { class: 'form-control'}
-
-    .col-4
-      .form-group.mb-4
-        = f.input :current_media_mix, collection: media_mix_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Mix' } }, include_hidden: false
-    .col-4
-      .row
-        .col-12
-          = f.label 'Age Range'
-        .col-5
-          = f.input :age_range_start, collection: 18..100, label: false, include_blank: false
-        .col-2
-          p.mt-2.text-center to
-        .col-5
-          = f.input :age_range_end, collection: 18..100, label: false, include_blank: false
-
-    .col-4
-      .form-group.mb-4
-         = f.input :gender, collection: options_for_gender, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Genders' }}, include_hidden: false
-    .col-4
-      .form-group.mb-4
-        = f.input :household_income, collection: income_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Income' }}, include_hidden: false
-    .col-4
-      .form-group.mb-4
-        = f.input :parental_status, collection: parental_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Status' } }, include_hidden: false
-    .col-4
-      .form-group.mb-4
-        = f.input :education, collection: education_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Education' } }, include_hidden: false
-    .col-4
-      .form-group.mb-4
-        = f.input :language, collection: language_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Languages' } }, include_hidden: false
+  h3.form-title Advertiser Profile
+  .row
     .col-6
-      .form-group.mb-4
-        = f.input :affinity, collection: affinity_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Affinity' } }, include_hidden: false
-    .col-6
-    .col-6
-      = link_to 'Cancel', agency_clients_path
-    .col-6
-      = f.submit 'Submit', class: 'btn btn-primary float-right'
+      .form-v2
+        .form-group
+          = f.label :name, 'Advertiser Name', class: 'label-v2'
+          = f.input_field :name, class: 'input-v2 form-control'
+
+        .form-group
+          = f.label :industry, class: 'label-v2'
+          = f.input_field :industry, collection: industry_options, include_blank: false, class: 'select2-input form-control input-v2'
+
+        .form-group
+          = f.label :website, 'Website URL', class: 'label-v2'
+          = f.input_field :website, class: 'input-v2 form-control'
+
+        .form-group
+          = f.label :monthly_unique_visitors, class: 'label-v2'
+          = f.input_field :monthly_unique_visitors, class: 'form-control input-v2'
+
+        .form-group
+          = f.label :customer_target, 'Business Type', class: 'label-v2'
+          = f.input_field :customer_target, collection: customer_target_options, include_blank: false, class: 'select2-input form-control input-v2'
+
+        .form-group
+          = f.label :current_media_mix, 'Current Media Mix', class: 'label-v2'
+          = f.input_field :current_media_mix, collection: media_mix_options, multiple: true, class: 'select2-input form-control input-v2', include_hidden: false
+
+        .form-group
+          = link_to "Cancel", :back, :class => 'btn btn-cancel-v2', style: 'width: 35%'
+          = f.button :submit, 'Finish', class: 'btn btn-primary-v2 btn-sm float-right', style: 'width: 61%'
 
 
     javascript:
-      $(document).ready(function() {
-        $('.select2-input').select2({
-          theme: 'bootstrap',
-          width: 'null',
-          containerCssClass: ':all:'
-        });
+        $(document).ready(function () {
+            $('.select2-input').select2({
+                theme: 'bootstrap',
+                width: 'null',
+                containerCssClass: ':all:'
+            });
 
-      });
+        });
