--- a/app/views/users/edit.slim
+++ b/app/views/users/edit.slim
@@ -1,7 +1,13 @@
-.container-fluid
+.agency-dashboard
+  h1 Profile Settings
+  .dropdown-menu-button
+    = react_component("LinkDropdownMenuComponent",
+            props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
+            prerender: false)
   .row
-    .col-12.col-md-6
-      .card
+    .col-12
+      .card.card-v2
         .card-body
-          h4 Edit User
-          = render 'form'
+          .row
+            .col-6
+              = render 'form'
