Create audience controller, update campaign creation flow

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -11,14 +11,15 @@
     .basic-input, .react-tagsinput
       border: 1px solid #BDBDBD
       border-radius: 8px
+    .basic-input
       height: 55px
-  .back-btn, .select-btn
+  .back-btn, .select-btn, .provider-btn
     border: 1px solid #58107C
     box-sizing: border-box
     border-radius: 8px
     color: #58107C
     font-size: 14px
-  .back-btn
+  .back-btn, .provider-btn
     width: 150px
     height: 50px
   .select-btn
@@ -36,6 +37,7 @@
     display: flex
     align-items: center
     padding: 0 0 0 10px
+    height: 150px
   .react-tagsinput--focused, .react-tagsinput-tag
     border: 1px solid #DCC3E6
   .react-tagsinput-tag
