Logout, delete client, campaigns index, sidenav

--- a/app/assets/stylesheets/base/layout.sass
+++ b/app/assets/stylesheets/base/layout.sass
@@ -14,7 +14,8 @@ body
   .main-content
     width: calc(100% - 275px)
     padding-top: 30px
-    background-color: #F9F9F9
+    background: #F9F9F9
+
 .h5
   font-size: 17px
   background: #F9F9F9
