--- a/app/assets/stylesheets/base/navigation.sass
+++ b/app/assets/stylesheets/base/navigation.sass
@@ -6,10 +6,11 @@ nav#sidebar
   height: calc(100vh - 63px)
   background: white
   color: black
-  padding: 30px 15px
-  font-family: sailec
-  font-weight: 500
+  padding: 20px 15px
+  font-family: Nunito
+  font-weight: 400
   ul.main-links
+    padding: 30px 0
     p 
       text-transform: uppercase
       font-size: 11px
