--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -6,13 +6,13 @@
   font-family: Nunito
 
   .no-clients-card
-    height: 219px;
-    border: 1px dashed #C1C1C1;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    height: 219px
+    border: 1px dashed #C1C1C1
+    border-radius: 8px
+    display: flex
+    align-items: center
+    justify-content: center
+    text-align: center
 
   .form-title
     color: $purple-2
@@ -131,7 +131,7 @@
     text-align: left
     padding-left: 5px
 
-  .advertiser-grid-item
+  .grid-item
     padding-top: 15px
     padding-bottom: 15px
 
@@ -200,3 +200,62 @@
       margin-right: 10px
       margin-bottom: 0
       color: $gray-2
+
+  .campaigns-index-table
+    font-size: 14px
+    border: 1px solid #D9D9D9
+
+    .sort-caret
+      padding-left: 6px
+      font-size: 13px
+
+    .header-classes
+      background: #F7E9FD
+
+    tr
+      border: none
+    tr:hover
+      zoom: 105%
+    tr:nth-child(even)
+      background-color: #F2F2F2
+
+    th
+      border: none
+
+    td
+      border: none
+      vertical-align: middle
+
+
+
+
+    .budget-used-cell
+      margin: auto
+
+      p
+        margin-bottom: 0
+        text-align: center
+        line-height: 20px
+
+    .budget-used-bar
+      width: 100px
+      height: 11px
+      background: #E9E9E9
+      border: 1px solid #C0C0C0
+      box-sizing: border-box
+      border-radius: 8px
+      margin: auto
+
+    .budget-used-bar-inside
+      height: 11px
+      border-radius: 8px
+      margin: -1px
+
+    .dot.orange
+      height: 12px
+      width: 12px
+      border-radius: 50%
+      display: inline-block
+      background: #F2994A
+
+      margin: auto
