--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -2,32 +2,41 @@ nav#sidebar
   = link_to root_path, class: 'navbar-brand' do
     = image_tag "logo-orion.svg", style: 'width: 94px; margin-left: 13px'
   ul.list-unstyled.main-links
-    p MANAGE
-    li.clearfix class=(controller_name == 'dashboard' ? 'active' : '')
+    li.clearfix class=(controller_name == 'clients' ? 'active' : '')
       .icon-container
-        i.fas.fa-chalkboard-teacher
+        i.fas.fa-home
       = link_to "Dashboard", dashboard_index_path
+    li.clearfix class=(controller_name == 'campaigns' ? 'active' : '')
+      .icon-container
+        i.fas.fa-crosshairs
+      - if current_user.company_type == 'Advertiser'
+        = link_to "Campaign Planner", advertiser_campaigns_path(advertiser_id: current_user.company.id)
+      - else current_user.company_type == 'Agency'
+        = link_to "Campaign Planner", agency_client_campaigns_path(agency_id: current_user.company.id, client_id: 1)
     li.clearfix
       .icon-container
-        i.fas.fa-crop-alt
+        i.fas.fa-paint-brush
       = link_to 'Creative Automatic', "https://creativeautomatic.com/client/login.html", target: :_blank
     li.clearfix class=(controller_name == 'platforms' ? 'active' : '')
       .icon-container
-        i.fas.fa-crosshairs
+        i.fas.fa-bullhorn
       = link_to "Demand Side Platforms", platforms_path
     li.clearfix
       .icon-container
         i.fas.fa-address-card
-      = link_to 'Customer Data Platform', 'https://smartpixl.com/Login/Login/Login', target: :_blank
+      = link_to 'Customer Intelligence', 'https://smartpixl.com/Login/Login/Login', target: :_blank
     li.clearfix
       .icon-container
-        i.fas.fa-search-location
+        i.fas.fa-map-marker-alt
       = link_to 'Where to Buy', 'https://insights.pricespider.com/login', target: :_blank
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
       = link_to 'Analytics', current_user&.token_url, class: 'tapclicks-link', target: :_blank
-
+    li.clearfix
+      .icon-container
+        i.fas.fa-sign-out-alt
+      = link_to 'Logout', destroy_user_session_path, method: :delete
 
 javascript:
   // Add page refresh after clicking on Analytics link
