--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -33,6 +33,7 @@
   .gear-icon
     color: #828282
     font-size: 21px
+    padding: 6px
 
   .form-v2
     .label-v2
@@ -77,6 +78,7 @@
       vertical-align: middle
 
   .btn-cancel-v2
+    color: $purple-2
     background: white
     font-weight: 400
     font-size: 14px
@@ -85,6 +87,17 @@
     border-radius: 8px
     padding: 10px 13px 10px 13px
     border: 1px solid $purple-2
+
+  .btn-cancel-v2.btn-drawer
+    width: 34px
+    height: 34px
+    margin-right: 15px
+
+  .btn-cancel-v2.btn-campaign-back
+    width: 193px
+    height: 34px
+    margin-right: 15px
+    padding: 0
 
   .btn-secondary-v2
     background: white
@@ -214,8 +227,10 @@
 
     tr
       border: none
+
     tr:hover
       zoom: 105%
+
     tr:nth-child(even)
       background-color: #F2F2F2
 
@@ -225,8 +240,6 @@
     td
       border: none
       vertical-align: middle
-
-
 
 
     .budget-used-cell
@@ -251,11 +264,68 @@
       border-radius: 8px
       margin: -1px
 
-    .dot.orange
-      height: 12px
-      width: 12px
-      border-radius: 50%
-      display: inline-block
-      background: #F2994A
 
-      margin: auto
+  .dot.orange
+    height: 12px
+    width: 12px
+    border-radius: 50%
+    display: inline-block
+    background: #F2994A
+    margin: auto
+
+  .campaign-details
+    h6
+      font-size: 14px
+      font-weight: 700
+      line-height: 11px
+      letter-spacing: 0em
+      text-align: left
+
+    label
+      font-size: 14px
+      font-weight: 400
+      line-height: 11px
+      letter-spacing: 0em
+      text-align: left
+      margin-bottom: 0
+
+    label.goal-label
+      font-size: 21px
+      line-height: 16px
+      letter-spacing: 0em
+      color: #3289CB
+
+
+    .dot.orange
+      margin-right: 5px
+
+    .details-card
+      background: white
+      border: 1px solid #D9D9D9
+      box-sizing: border-box
+      border-radius: 8px
+      padding: 15px
+
+    .details-card.filled
+      padding: 0px
+
+  .tabs-component
+    div[role=tablist]
+      border-bottom: 1px solid #D9D9D9
+      background: transparent
+
+    button
+      background: transparent
+      height: 50px
+      border-top: none
+      border-bottom: none
+      border-left: none
+      border-right: 1px solid #D9D9D9
+
+
+    button:focus
+      outline: none
+
+    button.active
+      border-bottom: 3px solid $purple-2
+
