Fixed advertiser campaign bug

--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -20,5 +20,5 @@
             prerender: false)
 
   = react_component("CampaignDetailsComponent",
-          props: {campaign: @campaign, client: @client},
+          props: {campaign: @campaign, website: @website},
           prerender: false)
