Update campaign new income field

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -25,6 +25,8 @@
   .select-btn
     width: 85px
     height: 30px
+  .gender
+    text-transform: capitalize
   .next-btn
     width: 300px
     height: 50px
