Update button styles

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -19,6 +19,7 @@
     border-radius: 8px
     color: #58107C
     font-size: 14px
+    cursor: pointer
   .back-btn, .provider-btn
     width: 150px
     height: 50px
@@ -83,3 +84,7 @@
     text-transform: capitalize
   img
     width: 350px
+.campaign-modal
+  height: 250px
+.hide-modal
+  cursor: pointer
