T-29 - The see details link on advertiserCard now links to campaigns page

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -205,8 +205,14 @@
 
   .advertiser-card-bottom
     height: 51.95px
-    display: flex
+    display: grid
     align-items: center
+
+    .see-details-btn
+      float: right
+
+    .see-details-btn:focus
+      box-shadow: none
 
     label
       margin-left: auto
