--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -1,10 +1,10 @@
 .agency-dashboard
   h1 #{@company.name}
   .dropdown-menu-button
-    = react_component("LinkDropdownMenuComponent",
+    = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
             prerender: false)
   - if current_user.company_type == 'Agency'
-    = react_component("CampaignIndexViewComponent", props: {campaigns: @campaigns, link:"/agencies/#{@company.agency_id}/clients/#{@company.id}/campaigns/"}, prerender: false)
+    = react_component("CampaignIndexComponent", props: {campaigns: @campaigns, link:"/agencies/#{@company.agency_id}/clients/#{@company.id}/campaigns/"}, prerender: false)
   - elsif current_user.company_type == 'Advertiser'
-    = react_component("CampaignIndexViewComponent", props: {campaigns: @campaigns, link:"/advertisers/#{@company.id}/campaigns/"}, prerender: false)
+    = react_component("CampaignIndexComponent", props: {campaigns: @campaigns, link:"/advertisers/#{@company.id}/campaigns/"}, prerender: false)
