--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -1,6 +1,6 @@
 .agency-dashboard
   .dropdown-menu-button.float-left
-    = react_component("LinkDropdownMenuComponent",
+    = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-ellipsis-h",
                     token: form_authenticity_token,
                     buttonClass: 'btn-cancel-v2 btn-drawer',
@@ -12,10 +12,10 @@
   h1 #{@campaign.name}
 
   .dropdown-menu-button
-    = react_component("LinkButtonComponent",
+    = react_component("LinkButton",
             props: {text: 'Back to campaigns', icon: '', buttonClass: 'btn-cancel-v2 btn-campaign-back', link: @button_links[:back]},
             prerender: false)
-    = react_component("LinkDropdownMenuComponent",
+    = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
             prerender: false)
 
