--- a/app/views/clients/index.slim
+++ b/app/views/clients/index.slim
@@ -1,7 +1,7 @@
 .agency-dashboard
   h1 #{@agency.name}
   .dropdown-menu-button
-    = react_component("LinkDropdownMenuComponent",
+    = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon:"fas fa-pen", link:"/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
             prerender: false)
 
