--- a/app/views/clients/new.slim
+++ b/app/views/clients/new.slim
@@ -1,11 +1,13 @@
 .agency-dashboard
   h1 Create an Advertiser
   .dropdown-menu-button
-    = react_component("LinkDropdownMenuComponent",
+    = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
             prerender: false)
   .row
     .col-12
       .card.card-v2
         .card-body
-          = render 'form'
+          = react_component("AdvertiserForm",
+                  props: {advertiser: @client, industry_options: industry_options, customer_target_options: customer_target_options, media_mix_options: media_mix_options, new: true, token: form_authenticity_token},
+                  prerender: false)
