--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -3,7 +3,7 @@
     = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-ellipsis-h",
                     token: form_authenticity_token,
-                    buttonClass: 'btn-cancel-v2 btn-drawer',
+                    buttonClass: 'btn-secondary-v2 btn-drawer',
                     items: [{text: "Edit", icon: "fas fa-pen", link: @button_links[:edit]},
                             {text: "Duplicate", icon: "fas fa-copy", link: @button_links[:duplicate]},
                             {text: "Delete", icon: "fas fa-times-circle", link: @button_links[:delete], redirectLink: @button_links[:back], action: 'delete'}]},
@@ -13,7 +13,7 @@
 
   .dropdown-menu-button
     = react_component("LinkButton",
-            props: {text: 'Back to campaigns', icon: '', buttonClass: 'btn-cancel-v2 btn-campaign-back', link: @button_links[:back]},
+            props: {text: 'Back to campaigns', icon: '', buttonClass: 'btn-secondary-v2 btn-campaign-back', link: @button_links[:back]},
             prerender: false)
     = react_component("LinkDropdownMenu",
             props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
