Cleaned up models and routes

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -48,7 +48,7 @@
   padding-right: 47px
   font-family: Nunito
 
-  .no-clients-card
+  .no-advertisers-card
     height: 219px
     border: 1px dashed #C1C1C1
     border-radius: 8px
